refined-jiji/k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: refined-jiji-prod
  labels:
    name: refined-jiji-prod
    environment: production
